# url_shortener

./: .gitignore  README.md
backend/url_shortener/: Makefile  pyproject.toml
backend/url_shortener/shortener/: models.py  serializers.py  tasks.py  views.py
backend/url_shortener/shortener/migrations/: 0001_initial.py  0002_alter_shortenedurl_id_alter_url_id.py  0003_shortenedurl_last_accessed.py  0004_rename_link_url_main_link_url_last_accessed_and_more.py
backend/url_shortener/url_shortener/: celery.py  settings.py  urls.py
frontend/url_shortener_frontend/: Makefile  README.md  package.json
frontend/url_shortener_frontend/src/routes/: +page.svelte
frontend/url_shortener_frontend/src/routes/[code]/: +page.svelte
